<resources>
    <string name="app_name">FileStore</string>
    <string name="title_add_client">ADD</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_clients">CLIENTS</string>
    <string name="title_client_details">CLIENT DETAILS</string>
    <string name="date_label">Date:</string>
    <string name="name">Client Name</string>
    <string name="save">Save Client</string>
    <string name="order">Order</string>
    <string name="terms">Terms</string>
    <string name="profile_name">Username</string>
    <string name="profile_name_key">profile_name_key</string>
    <string name="profile_preference_key">profile_preference_key</string>
    <string name="profile_name_default"> </string>
    <string name="profile_update_success">Profile update success.</string>
    <string name="media">MEDIA</string>
    <string name="media_url_mp3">https://d276.d2mefast.net/tb/e/3e/zuchu_mwambieni_official_music_video_mp3_75538.mp3</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <!--    <string name="media_url_dash">https://www.youtube.com/watch?v=5kBlk8GsZlA</string>-->
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="current_song">Rick Testimony - Tommorowland</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_duration">4:34</string>
    <string name="title_activity_player">PlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
