<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/clientsFragment">

    <fragment
        android:id="@+id/addClientFragment"
        android:name="com.jerimkaura.filestore.presentation.add.AddFragment"
        android:label="@string/title_add_client"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_addFragment_to_clientsFragment"
            app:destination="@id/clientsFragment" />
    </fragment>
    <fragment
        android:id="@+id/clientsFragment"
        android:name="com.jerimkaura.filestore.presentation.clients.ClientsFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/fragment_clients">
        <action
            android:id="@+id/action_clientsFragment_to_clientDetailsFragment"
            app:destination="@id/clientDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.jerimkaura.filestore.presentation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/clientDetailsFragment"
        android:name="com.jerimkaura.filestore.presentation.client.ClientDetailsFragment"
        android:label="@string/title_client_details"
        tools:layout="@layout/fragment_client_details">
        <action
            android:id="@+id/action_clientDetailsFragment_to_clientsFragment"
            app:destination="@id/clientsFragment" />
        <argument
            android:name="client_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/playAudioFragment"
        android:name="com.jerimkaura.filestore.presentation.media.PlayAudioFragment"
        android:label="MEDIA"
        tools:layout="@layout/fragment_play_audio" >
        <action
            android:id="@+id/action_playAudioFragment_to_clientsFragment"
            app:destination="@id/clientsFragment" />
    </fragment>
</navigation>