<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".presentation.client.ClientDetailsFragment">

    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Client Name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                android:text="@string/date_label"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintRight_toLeftOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAlignment="textEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/orderLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/order"
                android:textAppearance="@android:style/TextAppearance.Material.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderLabel"
                tools:text="Order" />

            <TextView
                android:id="@+id/termsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/terms"
                android:textAppearance="@android:style/TextAppearance.Material.Caption"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/termsLabel"
                tools:text="Terms" />

            <TextView
                android:id="@+id/files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms"
                tools:text="Files" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_files"
                android:layout_width="match_parent"
                tools:listitem="@layout/file_item"
                tools:itemCount="3"
                android:layout_height="0dp"
                android:layout_marginVertical="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/files" />

            <Button
                android:id="@+id/btnProposal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="GENERATE PROPOSAL"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_files" />

            <Button
                android:id="@+id/btnPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                android:text="Upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnProposal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>